--- a/project/composer.json
+++ b/project/composer.json
@@ -23,7 +23,8 @@
         "zendframework/zend-hydrator": "^2.2",
         "zendframework/zend-mvc-i18n": "^1.0",
         "zendframework/zend-permissions-acl": "^2.6",
-        "zendframework/zend-session": "^2.7"
+        "zendframework/zend-session": "^2.7",
+        "zendframework/zend-paginator": "^2.7"
     },
     "autoload": {
         "psr-4": {
